[package]
name = "burqdb"
version = "0.1.0"
edition = "2024"

[lib]
name = "libburqdb"
path = "src/lib/lib.rs"

[[bin]]
name = "burqdb"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.99"
bincode = { version = "2.0.1", features = ["serde", "derive"] }
serde = { version = "1.0.219", features = ["derive"] }
